; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/drivers/platform/x86/extr_acerhdf.c_acerhdf_register_platform.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/drivers/platform/x86/extr_acerhdf.c_acerhdf_register_platform.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@acerhdf_driver = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [8 x i8] c"acerhdf\00", align 1
@acerhdf_dev = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 ()* @acerhdf_register_platform to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @acerhdf_register_platform() #0 {
  %1 = alloca i32, align 4
  %2 = alloca i32, align 4
  store i32 0, i32* %2, align 4
  %3 = call i32 @platform_driver_register(i32* @acerhdf_driver)
  store i32 %3, i32* %2, align 4
  %4 = load i32, i32* %2, align 4
  %5 = icmp ne i32 %4, 0
  br i1 %5, label %6, label %8

6:                                                ; preds = %0
  %7 = load i32, i32* %2, align 4
  store i32 %7, i32* %1, align 4
  br label %12

8:                                                ; preds = %0
  %9 = call i32 @platform_device_alloc(i8* getelementptr inbounds ([8 x i8], [8 x i8]* @.str, i64 0, i64 0), i32 -1)
  store i32 %9, i32* @acerhdf_dev, align 4
  %10 = load i32, i32* @acerhdf_dev, align 4
  %11 = call i32 @platform_device_add(i32 %10)
  store i32 0, i32* %1, align 4
  br label %12

12:                                               ; preds = %8, %6
  %13 = load i32, i32* %1, align 4
  ret i32 %13
}

declare dso_local i32 @platform_driver_register(i32*) #1

declare dso_local i32 @platform_device_alloc(i8*, i32) #1

declare dso_local i32 @platform_device_add(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
